CameraOvelay: Move hover border to CameraOverlay to fix 1px page oversize causing horz. scrollbar.

--- a/apps/exopticon/assets/css/components/camera_overlay.css
+++ b/apps/exopticon/assets/css/components/camera_overlay.css
@@ -2,6 +2,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    padding: 1px;
+}
+
+.camera-overlay:hover {
+  padding: 0;
+  border: 1px solid orange;
 }
 
 .camera-overlay > .ptz-controls {
