--- a/apps/exopticon/assets/css/components/camera_view.css
+++ b/apps/exopticon/assets/css/components/camera_view.css
@@ -5,12 +5,6 @@
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    padding: 1px;
-}
-
-.camera:hover {
-    border: 1px solid orange;
-    padding: 0;
 }
 
 .camera img {
